# loan-default

./: .gitignore  README.md  pyproject.toml
notebooks/: LoanDefaults.ipynb  LoanDefaults.py
src/loan_default/etl/: __init__.py  extract.py
src/loan_default/modeling/: pipeline.py
src/loan_default/modelling/: evaluation.py  pipeline.py
