
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "loan-default"
dependencies = ["pandas>=2.2.3", "numpy>=2.2.6", "matplotlib>=3.10.3", "scikit-learn>=1.6.1"]
description = "Checks to see if user defaulted on loans"
requires_python = ">= 3.13"
dynamic = ["version"]

[project-urls]
source = "https://github.com/lukenelson1012/loan-default"