
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "loan-default"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "kagglehub[pandas-datasets]"]
description = "Checks to see if user defaulted on loans"
requires_python = ">= 3.13"
dynamic = ["version"]

[project-urls]
source = "https://github.com/lukenelson1012/loan-default"