
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "loan-default"
dependencies = [
    "kaggle",
    "matplotlib",
    "numpy"
    "pandas",
    "scikit-learn",
    ]
description = "Checks to see if user defaulted on loans"
dynamic = ["version"]
requires_python = ">= 3.13"

[project-urls]
source = "https://github.com/lukenelson1012/loan-default"